[gd_scene load_steps=5 format=3 uid="uid://cidoltower1"]

[ext_resource type="Script" path="res://scripts/game_main.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/tower.gd" id="2_tower"]
[ext_resource type="Texture2D" path="res://assets/kenney-tiny-dungeon/tile_0084.png" id="3_towertex"]

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 20.0

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.05, 0.02, 0.1, 1)

[node name="Tower" type="CharacterBody2D" parent="."]
position = Vector2(640, 360)
collision_layer = 1
collision_mask = 0
script = ExtResource("2_tower")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_player")

[node name="Visual" type="Sprite2D" parent="Tower"]
texture = ExtResource("3_towertex")
texture_filter = 1
scale = Vector2(4, 4)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HPBar" type="ProgressBar" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 260.0
offset_bottom = 40.0
value = 100.0
show_percentage = false

[node name="WaveLabel" type="Label" parent="UI"]
offset_left = 540.0
offset_top = 20.0
offset_right = 740.0
offset_bottom = 50.0
text = "Spell Cascade"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="UI"]
offset_left = 1100.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 50.0
text = "10:00"
horizontal_alignment = 2

[node name="BuildLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 150.0
text = ""

[node name="RestartLabel" type="Label" parent="UI"]
offset_left = 440.0
offset_top = 400.0
offset_right = 840.0
offset_bottom = 440.0
text = "Press R to Restart"
horizontal_alignment = 1
